Fixed words overlapping, gradient for friends list, tooltips

--- a/client/src/components/clock.css
+++ b/client/src/components/clock.css
@@ -10,6 +10,6 @@
     text-align: right;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 30px;
     color:white;
 }
